# storefront

./: .env.sample  .gitignore  Dockerfile  Procfile  README.md  db.Dockerfile  db_init.sql  docker-compose.yml  pyproject.toml  requirements.txt
core/: admin.py  apps.py  models.py  serializers.py  urls.py
core/migrations/: 0001_initial.py
core/signals/: handlers.py
likes/migrations/: 0001_initial.py
locustfiles/: browse_products.py
playground/: urls.py  views.py
store/: admin.py  apps.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  validators.py  views.py
store/migrations/: 0006_auto_20211124_0722.py  0007_auto_20211128_2043.py  0008_auto_20211202_0128.py  0009_cart_cartitem.py  0010_cartitem_unique_product_in_cart.py  0011_alter_cartitem_quantity.py  0012_customer_user.py  0013_remove_extra_fields_defined_in_customer.py  0014_alter_order_options.py  0015_alter_customer_options.py  0016_auto_20211221_0051.py  0017_alter_productimage_image.py
store/signals/: handlers.py
store/tests/: conftest.py  test_collections.py
storefront/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
storefront/settings/: common.py  dev.py  prod.py
