[tool.poetry]
name = "storefront"
version = "0.1.0"
description = ""
authors = ["Mahdi Ghiasi <mahdiw.ghiasi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.10"
djangorestframework = "^3.13.1"
django-debug-toolbar = "^3.2.4"
psycopg2-binary = "^2.9.3"
djoser = "^2.1.0"
drf-nested-routers = "^0.93.4"
django-filter = "^21.1"
Pillow = "^9.0.0"
django-cors-headers = "^3.11.0"
redis = "^4.1.1"
celery = "^5.2.3"
flower = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-django = "^4.5.2"
pytest-watch = "^4.2.0"
model-bakery = "^1.4.0"
black = "^21.12b0"
locust = "^2.5.1"
django-silk = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
